--- a/main-stack.yaml
+++ b/main-stack.yaml
@@ -13,14 +13,14 @@ Resources:
     PrivateSubnetA:
         Type: 'AWS::EC2::Subnet'
         Properties:
-            AvailabilityZone: 'us-east-1a'
+            AvailabilityZone: 'us-west-2a'
             CidrBlock: '10.0.0.0/20'
             VpcId:
                 Ref: MainVpc
     PublicSubnetA:
         Type: 'AWS::EC2::Subnet'
         Properties:
-            AvailabilityZone: 'us-east-1a'
+            AvailabilityZone: 'us-west-2a'
             CidrBlock: '10.0.128.0/20'
             VpcId:
                 Ref: MainVpc
