--- a/main-stack.yaml
+++ b/main-stack.yaml
@@ -29,7 +29,7 @@ Resources:
         Properties:
             Tags:
                 - Key: Name
-                - Value: main-igw
+                  Value: main-igw
     MainIgwAttachment:
         Type: 'AWS::EC2::VPCGatewayAttachment'
         Properties:
